# ibex

./: .gitignore  CONTRIBUTING.md  Makefile  cmds.sh  flake.nix  flake_template_full.nix  nix_debugging.txt
doc/: conf.py  pyproject.toml  requirements.txt
doc/02_user/: integration.rst
doc/03_reference/: security.rst
dv/cosim/: spike_cosim.cc
dv/cs_registers/: Makefile
dv/formal/: pyproject.toml
dv/uvm/core_ibex/: Makefile  wrapper.mk
dv/uvm/core_ibex/common/ibex_cosim_agent/: ibex_cosim_scoreboard.sv  ibex_rvfi_monitor.sv
dv/uvm/core_ibex/scripts/: compile_tb.py  ibex_sim.mk  riscvdv.mk  riscvdv_interface.py  scripts_lib.py
dv/uvm/core_ibex/yaml/: rtl_simulation.yaml
examples/simple_system/: README.md
examples/simple_system/rtl/: ibex_simple_system.sv
examples/sw/simple_system/common/: common.mk
nix/: doc.nix  lowrisc_sail.nix  lowrisc_sail_riscv.nix  riscv_gcc.nix  riscv_gcc_lowrisc.nix
nix/pythonEnv/: pyproject.toml
rtl/: ibex_compressed_decoder.sv  ibex_controller.sv  ibex_core.sv  ibex_id_stage.sv  ibex_if_stage.sv  ibex_pkg.sv
shared/rtl/: ram_1p.sv  ram_2p.sv
util/: ibex_config.py
