[project]
name = "ibex"
version = "0.0.0"
description = "Ibex is a production-quality open source 32-bit RISC-V CPU core written in SystemVerilog."
authors = []
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "Apache 2.0"}
dependencies = [
    "packaging==23.1",
    "anytree==2.8.0",
    "hjson==3.1.0",
    "mako==1.1.6",
    "pyyaml==6.0",
    "wheel==0.41.2",
    "edalize",
    "fusesoc",
]

[tool.uv]

[tool.uv.sources]
edalize = { git = "https://github.com/lowRISC/edalize.git", tag = "v0.4.0" }
fusesoc = { git = "https://github.com/lowRISC/fusesoc.git", tag = "ot-0.4" }

[tool.setuptools]
py-modules = []

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
